ui fixes and update to station creation
